Docker, Fecth live info

--- a/app/views/radiostations/_form.html.erb
+++ b/app/views/radiostations/_form.html.erb
@@ -3,6 +3,7 @@
 
   <div class="form-inputs">
     <%= f.input :streaming_url %>
+    <%= f.input :json_url %>
     <%= f.input :name %>
     <%= f.input :logo, as: :file %>
     <%= f.input :description %>
