--- a/app/views/radiostations/index.html.erb
+++ b/app/views/radiostations/index.html.erb
@@ -2,12 +2,13 @@
 
 <h1>Radiostations</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
-      <th>Streaming url</th>
-      <th>Name</th>
       <th>Logo</th>
+      <th>Name</th>
+      <th>Streaming url</th>
+      <th>Json url</th>
       <th>Description</th>
       <th>Active</th>
       <th>Online</th>
@@ -18,15 +19,26 @@
   <tbody>
     <% @radiostations.each do |radiostation| %>
       <tr>
-        <td><%= radiostation.streaming_url %></td>
+        <td class="logo-radio"><%= image_tag radiostation.logo.url %></td>
         <td><%= radiostation.name %></td>
-        <td><%= radiostation.logo %></td>
+        <td><%= radiostation.streaming_url %></td>
+        <td><%= radiostation.json_url %></td>
         <td><%= radiostation.description %></td>
         <td><%= radiostation.active %></td>
         <td><%= radiostation.online %></td>
-        <td><%= link_to 'Show', radiostation %></td>
-        <td><%= link_to 'Edit', edit_radiostation_path(radiostation) %></td>
-        <td><%= link_to 'Destroy', radiostation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <a href="<%= url_for radiostation_path(radiostation) %>">
+            <i class="fa fa-eye" aria-hidden="true"></i>
+          </a>
+        </td>
+        <td>
+          <a href="<%= url_for edit_radiostation_path(radiostation) %>">
+            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+          </a>
+        </td>
+        <td>
+          <%= link_to 'Destroy', radiostation, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -34,4 +46,4 @@
 
 <br>
 
-<%= link_to 'New Radiostation', new_radiostation_path %>
+<%= link_to 'New Radiostation', new_radiostation_path, class: "btn btn-success" %>
