--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,7 @@
 
   <body>
   	<div class="container">
-			<p class="notice"><%= notice %></p>
-			<p class="alert"><%= alert %></p>
+      <%= flash_messages %>
 	    <%= yield %>
   	</div>
   </body>
