--- a/app/views/radiostations/_form.html.erb
+++ b/app/views/radiostations/_form.html.erb
@@ -15,6 +15,8 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, class: 'btn-primary' %>
+    <%= link_to 'Show', @radiostation, class: "btn btn-default", role: "button" if @radiostation.streaming_url %>
+    <%= link_to 'Back', radiostations_path, class: "btn btn-default", role: "button" %>
   </div>
 <% end %>
