--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RadioPanel</title>
+    <title><%= yield(:title) %></title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,9 +9,17 @@
   </head>
 
   <body>
-  	<div class="container">
-      <%= flash_messages %>
-	    <%= yield %>
-  	</div>
+    <div class="app app-blue-sky">
+      <%= render "shared/sidebar" %>
+      <div class="app-container">
+        <%= render "shared/navbar" %>
+        <div class="row">
+          <div class="col-xs-12">
+          <%= flash_messages %>
+          <%= yield %>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
