--- a/app/views/radiostations/edit.html.erb
+++ b/app/views/radiostations/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Editing Radiostation</h1>
+<% content_for :title, "Edit: " + @radiostation.slug %>
 
 <%= render 'form', radiostation: @radiostation %>
