--- a/app/views/radiostations/index.html.erb
+++ b/app/views/radiostations/index.html.erb
@@ -1,46 +1,63 @@
-<h1>Radiostations</h1>
-
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th>Logo</th>
-      <th>Name</th>
-      <th>Streaming url</th>
-      <th>Json url</th>
-      <th>Description</th>
-      <th>Active</th>
-      <th>Online</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @radiostations.each do |radiostation| %>
-      <tr>
-        <td class="logo-radio"><%= image_tag radiostation.logo.url %></td>
-        <td><%= radiostation.name %></td>
-        <td><%= radiostation.streaming_url %></td>
-        <td><%= radiostation.json_url %></td>
-        <td><%= radiostation.description %></td>
-        <td><%= radiostation.active %></td>
-        <td><%= radiostation.online %></td>
-        <td>
-          <a href="<%= url_for radiostation_path(radiostation) %>">
-            <i class="fa fa-eye" aria-hidden="true"></i>
-          </a>
-        </td>
-        <td>
-          <a href="<%= url_for edit_radiostation_path(radiostation) %>">
-            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-          </a>
-        </td>
-        <td>
-          <%= link_to raw('<i class="fa fa-remove" aria-hidden="true"></i>'), radiostation, method: :delete, data: { confirm: 'Are you sure?' } %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<% content_for :title, "Radiostations" %>
+<div class="card">
+  <div class="card-body no-padding">
+    <table class="datatable table table-striped primary" cellspacing="0" width="100%">
+      <thead>
+        <tr>
+          <th></th>
+          <th>Logo</th>
+          <th>Name</th>
+          <th>Streaming & Json urls</th>
+          <th>Status</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @radiostations.each do |radiostation| %>
+          <tr>
+            <td class ="action">
+              <a href="<%= url_for radiostation_path(radiostation) %>">
+                <i class="fa fa-eye" aria-hidden="true"></i>
+              </a>
+              <%= link_to edit_radiostation_path(radiostation) do %>
+                <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+              <% end %>
+            </td>
+            <td class="logo-radio"><%= image_tag radiostation.logo.url %></td>
+            <td><%= radiostation.name %></td>
+            <td>
+              <%= link_to radiostation.streaming_url, radiostation.streaming_url %>
+              <br />
+              <%= link_to radiostation.json_url, radiostation.json_url %>
+            </td>
+            <td>
+              <% if radiostation.active %>
+                <span class="label label-info">Active</span>
+              <% else %>
+                <span class="label label-warning">Inactive</span>
+              <% end %>
+              <% if radiostation.online %>
+                <span class="label label-success">Online</span>
+              <% else %>
+                <span class="label label-danger">Offline</span>
+              <% end %>
+              <% if radiostation.live_info[:is_live] %>
+                <span class="label label-primary">On Air</span>
+              <% else %>
+                <span class="label label-default">Deferred</span>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to radiostation, method: :delete, data: { confirm: 'Are you sure?' } do %>
+                <i class="fa fa-remove" aria-hidden="true"></i>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+        </tbody>
+    </table>
+  </div>
+</div>
 
 <br>
 
