Added filter by country

--- a/app/views/radiostations/_form.html.erb
+++ b/app/views/radiostations/_form.html.erb
@@ -11,6 +11,7 @@
     <%= f.input :online %>
     <%= f.input :language, collection: Radiostation.language_list %>
     <%= f.input :weigth %>
+    <%= f.input :country %>
     <%= f.input :slug %>
   </div>
 
